crates/aranya-policy-lang/tests/data/keyword_collision/action_name.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Reserved identifier
  |
1 | action int() {}
  |        ^^^ found reserved identifier: `int`
